<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_CMD_EPICS" Id="{4efa13fc-0f5c-44cc-8a6d-b3a9305f00ac}">
    <Declaration><![CDATA[TYPE ST_CMD_EPICS :
STRUCT
	bExecute          : BOOL:=FALSE;
	bEnable           : BOOL:=FALSE;
	bReset            : BOOL:=FALSE;
	fVelSet           : LREAL:=0;
	fPosSet           : LREAL:=0;
	eTargetStateCmd   : TARGET_STATE_MACHINE:=TARGET_STATE_MACHINE.NONE;
	ePhaseCntrlAlg    : E_PHASE_TYPE:=E_PHASE_TYPE.PID;
	ePhasePwmType     : E_PWM_TYPE:=E_PWM_TYPE.NONE;
	fPhaseOffsetMM    : LREAL:=0; 
	//brake
	bBrakeLockOnCmd   : BOOL:=FALSE;
	bFreeWheelOnOnCmd : BOOL:=TRUE;
	fBrakeSpNm        : LREAL:=0;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>