<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="GVL_ErrorCodes" Id="{2a5675cd-f9a5-4b29-8d57-a071f0a61152}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
  // ************************General****************************	
  nErrorCodeOKId              : UDINT  := 0;
  nErrorCodeOKStr             : STRING := 'NO ERROR';
  // To high velocity 
  nErrorVelToHigh             : UDINT  := 100;
  sErrorVelToHigh             : STRING := 'MAIN: VELOCITY TO HIGH';
  
  // ************************FB_ModePhase()****************************	
  // No new latched position value have been identified for the last 71 ms (no signal from timing system?)
  nErrorNoLatchId             : UDINT  := 1000;
  sErrorNoLatchStr            : STRING := 'PHASE: NO LATCH FROM DRIVE';
	
  // ************************FB_ModeHome()*****************************
  // The encoder index pulse seems to be lost (a latch have not been identified for the last rev)
  nErrorEncoderLatchLost      : UDINT  := 2000;
  sErrorEncoderLatchLost      : STRING := 'HOME: ENCODER INDEX PULSE LATCH LOST';
  // Deviation found in the latched position values (on index pulse)
  // Could be that encoder pulses are lost or that several index latches occurs per rev.
  nErrorEncoderLatchMissMatch : UDINT  := 2001;
  sErrorEncoderLatchMissMatch : STRING := 'HOME: ENCODER INDEX PULSES POSITION MISSMATCH';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>