<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_AxisStruct_1" Id="{fb2f754a-62a1-4189-8243-f3412041040b}">
    <Declaration><![CDATA[TYPE ST_AxisStruct_1 :
STRUCT
    stControl: ST_AxisControl;
    stStatus: ST_AxisStatus;
    stConfig: ST_AxisConfig;
    stError: ST_AxisError;
    stInputs: ST_AxisInputs;
    Axis: AXIS_REF; //The NC axis link to the hardware that is controlling
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>